--- a/templates/default/apache2.conf.erb
+++ b/templates/default/apache2.conf.erb
@@ -9,11 +9,14 @@ ServerRoot "<%= node['apache']['dir'] %>"
 # The accept serialization lock file MUST BE STORED ON A LOCAL DISK.
 #
 <% if %w[debian].include?(node['platform_family']) -%>
-LockFile /var/lock/apache2/accept.lock
+# LockFile /var/lock/apache2/accept.lock
+Mutex file:/var/lock/apache2 default
 <% elsif %w[freebsd].include?(node['platform_family']) -%>
-LockFile /var/log/accept.lock
+# LockFile /var/log/accept.lock
+Mutex file:/var/log default
 <% else %>
-LockFile logs/accept.lock
+# LockFile logs/accept.lock
+Mutex file:logs default
 <% end -%>
 
 #
@@ -111,7 +114,7 @@ AccessFileName .htaccess
 # keep browsers from trying to display binary files as though they are
 # text.
 #
-DefaultType text/plain
+# DefaultType text/plain
 
 
 #
