--- a/templates/default/default-site.erb
+++ b/templates/default/default-site.erb
@@ -9,7 +9,7 @@
 
   <Directory <%= node['apache']['docroot_dir'] %>/>
     Options Indexes FollowSymLinks MultiViews
-    AllowOverride None
+    AllowOverride All
     Order allow,deny
     Allow from all
   </Directory>
@@ -17,7 +17,7 @@
   ScriptAlias /cgi-bin/ <%= node['apache']['cgibin_dir'] %>/
   <Directory "<%= node['apache']['cgibin_dir'] %>">
     AllowOverride None
-    Options ExecCGI -MultiViews +SymLinksIfOwnerMatch
+    Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
     Order allow,deny
     Allow from all
   </Directory>
