--- a/templates/default/mods/ssl.conf.erb
+++ b/templates/default/mods/ssl.conf.erb
@@ -52,11 +52,14 @@
   #   Configure the path to the mutual exclusion semaphore the
   #   SSL engine uses internally for inter-process synchronization.
   <% if %w[rhel fedora suse].include?(node['platform_family']) -%>
-  SSLMutex  default
+  # SSLMutex  default
+  Mutex default ssl-cache
   <% elsif %w[freebsd].include?(node['platform_family']) -%>
-  SSLMutex  file:/var/run/ssl_mutex
+  # SSLMutex  file:/var/run/ssl_mutex
+  Mutex file:/var/run/ssl_mutex ssl-cache
   <% else -%>
-  SSLMutex  file:/var/run/apache2/ssl_mutex
+  # SSLMutex  file:/var/run/apache2/ssl_mutex
+  Mutex file:/var/run/apache2/ssl_mutex ssl-cache
   <% end -%>
 
   SSLHonorCipherOrder On
