--- a/templates/default/ports.conf.erb
+++ b/templates/default/ports.conf.erb
@@ -5,5 +5,5 @@
 <% node['apache']['listen_addresses'].uniq.each do |address| -%>
 Listen <%= address.length > 0 ? "#{address}:" : '' %><%= port %>
 <% end -%>
-NameVirtualHost *:<%= port %>
+# NameVirtualHost *:<%= port %>
 <% end -%>
